--- a/Helltaker1/Helltaker1/MainWindow.xaml
+++ b/Helltaker1/Helltaker1/MainWindow.xaml
@@ -10,6 +10,7 @@
         WindowStyle = "None"
         AllowsTransparency = "True"
         Background="Transparent"
+        ShowInTaskbar="False"
         >
     <Grid>
         <Image x:Name="Sticker"/>
